--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">SampleFeedFetch</string>
+    <string name="facebook_app_id">1956194921374866</string>
+    <string name="fb_login_protocol_scheme">fb1956194921374866</string>
+
 </resources>
